--- a/frontend/src/app/views/user-view/user-list/user-list.component.html
+++ b/frontend/src/app/views/user-view/user-list/user-list.component.html
@@ -17,6 +17,7 @@
         <!-- Ajout du bouton Modifier avec l'appel à une fonction d'édition -->
         <!-- <button mat-raised-button color="primary" (click)="openEditUserModal(user.id)">Modifier</button> -->
         <button mat-raised-button color="primary" (click)="openUpdateUserPage(user.id)">Modifier</button>
+        <button mat-raised-button color="primary" (click)="openDetailsUserPage(user.id)">Details</button>
 
       </td>
     </tr>
